--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -29,7 +29,7 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         {%if imm.immagine %}
-           <a href="{{imm.immagine.url}}"> <img src="/orienta/media{{imm.immagine}}"> </a>
+           <a href="{{imm.immagine.url}}"> <img src="/orienta/media/{{imm.immagine}}"> </a>
         {%endif%}
         <br>
         {%if imm.url %}
