margine inferiore tab adesioni

--- a/tutor/templates/tutor/elenco_adesioni.html
+++ b/tutor/templates/tutor/elenco_adesioni.html
@@ -5,6 +5,7 @@
 <style>
      h2 {text-align: center; color:blue}
     .icona {cursor: pointer;}
+     table {margin-bottom: 20px;}
 </style>
 
 <script>
