dettaglio proposta margin bottom

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -79,7 +79,7 @@
     <h2>Adesioni</h2>
     <button class="w3.button w3-blue" onClick="adesione({{proposta.id}})">Nuova adesione</button>
     <div class="w3.container">
-        <table class="w3-table-all w3-card-4" style="width: 50%; margin:auto">
+        <table class="w3-table-all w3-card-4" style="width: 50%; margin:auto; margin-bottom:30px;">
             <th>Studente</th><th>Classe</th><th>Tutor</th><th>Canc.</th>
             {%for studente in iscritti %}
             <tr>
