luogo inserted in tamplate dettaglio proposta

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -64,7 +64,9 @@
         <tr>
             <td><span class=label>Descrizione:</span></td><td>{{proposta.descrizione|safe|default:""}}</td>
         </tr>
-       
+        <tr>
+            <td><span class=label>Luogo:</span></td>{{propost.luogo}}</td>
+        </tr>
     </table>  
     Allegato: <a href="{{proposta.allegato}}">{{proposta.allegato|default:''}}</a>
     <hr>
