--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -65,7 +65,7 @@
             <td><span class=label>Descrizione:</span></td><td>{{proposta.descrizione|safe|default:""}}</td>
         </tr>
         <tr>
-            <td><span class=label>Luogo:</span></td>{{propost.luogo}}</td>
+            <td><span class=label>Luogo:</span></td>{{proposta.luogo}}</td>
         </tr>
     </table>  
     Allegato: <a href="{{proposta.allegato}}">{{proposta.allegato|default:''}}</a>
