--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -65,7 +65,7 @@
             <td><span class=label>Luogo:</span></td><td>{{luogo}}</td>
         </tr>
         <tr>
-            <td><span class=label>Descrizione:</span></td><td>{{proposta.descrizione|safe|default:""}}</td>
+            <td><span class=label>Descrizione:</span></td><td><p>{{proposta.descrizione|safe|default:""}}</td>
         </tr>
        
     </table>  
