viewport in indirizzi

--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -5,7 +5,7 @@
        .intestazione {text-align:center; color:blue}
        
 </style>
-   
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {%endblock %}
 
 {% block content %}
