--- a/openday/templates/openday/iscrizione.html
+++ b/openday/templates/openday/iscrizione.html
@@ -16,6 +16,7 @@
             myform.submit();
         }
    </script>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 {%endblock %}
 
 {% block content %}
