--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -7,7 +7,7 @@
 
  h2 {text-align: center; color: blue}
 .gallery {display: flex}
-.imagebox {height:120px; text-align:center; margin-right:10px;}
+.imagebox {height:120px; text-align:center; margin-right:10px; border: 1px solid blue}
 .immagine {height: 100%; }
 a {cursor:pointer;}
 .video_logo {width:38px; margin-top: -10px;}
