--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -6,8 +6,8 @@
 <style>
 
  h2 {text-align: center; color: blue}
-.gallery {display: flex}
-.imagebox {height:120px; text-align:center; margin-right:10px; 
+.gallery {display: flex; width: 95%}
+.imagebox {height:180px; text-align:center; margin-right:10px; 
           border: 1px dashed blue; padding : 10px}
 .immagine {height: 75%; }
 a {cursor:pointer;}
