--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -7,8 +7,8 @@
 
  h2 {text-align: center; color: blue}
 .gallery {display: flex; width: 95%}
-.imagebox {height:180px; text-align:center; margin-right:10px; 
-          border: 1px dashed blue; padding : 10px}
+.imagebox {height:235px; text-align:center; margin-right:10px; 
+          border: 1px solid blue; padding : 10px}
 .immagine {height: 75%; }
 a {cursor:pointer;}
 .video_logo {width:38px; margin-top: -10px;}
