--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -6,8 +6,8 @@
 <style>
 
  h2 {text-align: center; color: blue}
-.gallery {display: flex; width: 95%}
-.imagebox {height:235px; text-align:center; margin-right:10px; 
+.gallery {display: flex; width: 95%; flex-wrap: wrap;}
+.imagebox {height:250px; text-align:center; margin-right:10px; 
           border: 1px solid blue; padding : 10px}
 .immagine {height: 75%; }
 a {cursor:pointer;}
