--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -82,7 +82,7 @@
                 <button class="w3-button">Indirizzi</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     {%for indirizzo in indirizzi %}
-                    <a href="/indirizzi/{{indirizzo.titolo}}" class="w3-bar-item w3-button ">{{indirizzo.titolo}}</a>
+                    <a href="/orienta/openday/indirizzi/{{indirizzo.titolo}}" class="w3-bar-item w3-button ">{{indirizzo.titolo}}</a>
                     {%endfor%}
                 </div>
             </div>
