item gallery in modbile menu

--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -125,6 +125,9 @@
                 {%endfor%}
             </div>
 
+            <a href="{%url 'openday:gallery' %}"><button class="w3-bar-item w3-button" ">Gallery</button></a>
+
+
         </div>
         
         {% endblock %}
