menu upload e cambiamento sigle

--- a/openday/templates/openday/upload.html
+++ b/openday/templates/openday/upload.html
@@ -35,11 +35,11 @@
         <p>
         <h3>Eventi</h3>
         <ul class="w3-ul">
-            <li><a href="javascript:carica('LS-1')"> Liceo SA 18 nov. 8:30-10:30</a></li>
-            <li><a href="javascript:carica('LZ-2')"> Liceo Sportivo 18 nov. 11:00-13:00</a></li>
-            <li><a href="javascript:carica('AFM-1')"> AFM 2 dic. 8:30-10:30</a></li>
-            <li><a href="javascript:carica('TU-23')"> Turismo 2 dic. 8:30-10:30</a></li>
-            <li><a href="javascript:carica('AG-1')"> Agrario 2 dic. 11:00-13:00</a></li>
+            <li>LS<a href="javascript:carica('LS')"> Liceo SA 18 nov. 8:30-10:30</a></li>
+            <li>LZ<a href="javascript:carica('LZ')"> Liceo Sportivo 18 nov. 11:00-13:00</a></li>
+            <li>AFM<a href="javascript:carica('AFM')"> AFM 2 dic. 8:30-10:30</a></li>
+            <li>TU<a href="javascript:carica('TU')"> Turismo 2 dic. 8:30-10:30</a></li>
+            <li>AG<a href="javascript:carica('AG')"> Agrario 2 dic. 11:00-13:00</a></li>
         </ul>
         
     </form>
