--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -74,6 +74,7 @@
                         {{evento.titolo}} {{evento.data}}
                     </a> 
                     {%endfor%}
+                    <a href="{%url 'openday:upload' %}">Aggiorna i dati</a>
                 </div>
             </div>
             {% endif %}
