voce di menu presenze upload

--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -74,7 +74,7 @@
                         {{evento.titolo}} {{evento.data}}
                     </a> 
                     {%endfor%}
-                    <a href="{%url 'openday:upload' %}">Aggiorna i dati</a>
+                    <a href="{%url 'openday:upload' %}" class="w3-bar-item w3-button" >Aggiorna i dati</a>
                 </div>
             </div>
             {% endif %}
