--- a/openday/templates/openday/upload.html
+++ b/openday/templates/openday/upload.html
@@ -4,7 +4,7 @@
 {%block head %}
 <style>
 
-    .tab {width:35px;}
+    .tab {width:35px; font-weight: bold;}
 
 </style>
 
@@ -40,11 +40,11 @@
         <p>
         <h3>Eventi</h3>
         <ul class="w3-ul">
-            <li><b class="tab">LS</b> <a href="javascript:carica('LS')"> Liceo SA 18 nov. 8:30-10:30</a></li>
-            <li><b class="tab">LZ</b> <a href="javascript:carica('LZ')"> Liceo Sportivo 18 nov. 11:00-13:00</a></li>
-            <li><b class="tab">AFM</b> <a href="javascript:carica('AFM')"> AFM 2 dic. 8:30-10:30</a></li>
-            <li><b class="tab">TU</b> <a href="javascript:carica('TU')"> Turismo 2 dic. 8:30-10:30</a></li>
-            <li><b class="tab">AG</b> <a href="javascript:carica('AG')"> Agrario 2 dic. 11:00-13:00</a></li>
+            <li><span class="tab">LS</span> <a href="javascript:carica('LS')"> Liceo SA 18 nov. 8:30-10:30</a></li>
+            <li><span class="tab">LZ</span> <a href="javascript:carica('LZ')"> Liceo Sportivo 18 nov. 11:00-13:00</a></li>
+            <li><span class="tab">AFM</span> <a href="javascript:carica('AFM')"> AFM 2 dic. 8:30-10:30</a></li>
+            <li><span class="tab">TU</span> <a href="javascript:carica('TU')"> Turismo 2 dic. 8:30-10:30</a></li>
+            <li><span class="tab">AG</span> <a href="javascript:carica('AG')"> Agrario 2 dic. 11:00-13:00</a></li>
         </ul>
         
     </form>
