--- a/openday/templates/openday/upload.html
+++ b/openday/templates/openday/upload.html
@@ -4,7 +4,7 @@
 {%block head %}
 <style>
 
-    .tab {width:50px; font-weight: bold;}
+    .tab {width:100px; font-weight: bold; color:blue}
 
 </style>
 
