cambiate istruzioni in upload

--- a/openday/templates/openday/upload.html
+++ b/openday/templates/openday/upload.html
@@ -31,8 +31,8 @@
 {%block content %}
 
 <div class="w3-container">
-    <h1>Upload Page</h1>
-    <p>Seguire l'ordine indicato nel caricamento archivi. Scarica una copia prima di sostituirli. </p>
+    <h1>Upload Iscrizioni</h1>
+    <p>Scegliere il file iscrizioni all'evento e premere il link corrispondente. </p>
     <form method="POST" enctype="multipart/form-data" id="myform" > 
         {% csrf_token %}
 
