--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -51,7 +51,7 @@
         </div>
 
         <!-- Menu schermi grandi-->
-        <div class="w3-bar w3-show-large w3-hide-small w3-blue w3-large" id="menu">
+        <div class="w3-bar w3-show-large w3-hide-small w3-blue" id="menu">
             
             <a href="{% url 'openday:index' %}" class="w3-bar-item w3-button ">Home</a>
                        
