scritta video in gallery

--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -21,7 +21,7 @@ a {cursor:pointer;}
 
 <div class="w3-container">
 
-   <h2> Galleria di immagini</h2>
+   <h2> Galleria di immagini e video</h2>
 
    <div class="gallery">
 
