--- a/tutor/templates/tutor/tutor.html
+++ b/tutor/templates/tutor/tutor.html
@@ -8,7 +8,6 @@
 
 {%endblock%}
 
-
 {%block content %}
 
 <h2>Elenco Tutor</h2>
@@ -21,7 +20,7 @@
             <tr>
                 <td>  {{tut.cognome}}</td>
                 <td>  {{tut.nome}}</td>
-                <td><a href="#"><img src="{%static 'tutor/gnome-help.png' %}"> </a> </td>
+                <td><a href="{%url 'tutor:elenco_attivita_tutor' tut.id %}"><img src="{%static 'tutor/gnome-help.png' %}"> </a> </td>
             </tr>
             {%endfor%}
         </table>
