aumentate dimensioni campo titolo

--- a/tutor/templates/tutor/dettaglio_attivita_tutor.html
+++ b/tutor/templates/tutor/dettaglio_attivita_tutor.html
@@ -8,6 +8,7 @@
     #scheda_inserimento table {width:100%; padding: 20px;}
     #id_descrizione {width:100%;}
     #id_durata {width: 60px;}
+    #id_titolo {width: 600px;}
  
 </style>
 
